--- a/light-projection-effect.html
+++ b/light-projection-effect.html
@@ -10,6 +10,10 @@
             margin: 0;
             padding: 0;
         }
+        body{
+            background: #000;
+            overflow: hidden;
+        }
     </style>
 </head>
 <body>
