--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
             background: #000;
             overflow: hidden;
         }
+        img{
+            display: none;
+        }
     </style>
 </head>
 <body>
+    <img src="./images/bg.png" alt="">
     <script src="./script/three.js"></script>
     <script src="./script/OrbitControls.js"></script>
     <script src="./script/light-projection-effect.js"></script>
