--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <img src="./images/bg.png" alt="">
+    <img src="./images/hardwood2_diffuse.jpg" alt="">
     <script src="./script/three.js"></script>
     <script src="./script/OrbitControls.js"></script>
     <script src="./script/light-projection-effect.js"></script>
