--- a/light-projection-effect.html
+++ b/light-projection-effect.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link type="text/css" rel="stylesheet" href="./css/pace.css">
     <title>light-projection-effect</title>
     <style>
         *{
@@ -17,8 +18,10 @@
     </style>
 </head>
 <body>
-    <script src="./script/three.js"></script>
-    <script src="./script/OrbitControls.js"></script>
-    <script src="./script/light-projection-effect.js"></script>
+    <!-- 进度条加载效果 -->
+    <script type="text/javascript" src="./script/pace.min.js"></script>
+    <script type="text/javascript" src="./script/three.js"></script>
+    <script type="text/javascript" src="./script/OrbitControls.js"></script>
+    <script type="text/javascript" src="./script/light-projection-effect.js"></script>
 </body>
 </html>
